# four-in-a-row

./: .gitignore  CMakeLists.txt  README.md
docs/: plans.docx
include/: Board.h  GameController.h  GameState.h  Player.h  PlayerInfo.h  Rules.h
src/: 4-in-a-row.cpp  Board.cpp  GameController.cpp  Rules.cpp  four-in-a-row.cpp
tests/: TestRules.cpp
